2009-07-06  Larry Ewing  <lewing@novell.com>

	* multiscaleimage.cpp (ZoomAboutLogicalPoint): make this compile.

2009-07-06  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp, multiscaleimage.h: keep the zoom and pan targets
	so ZoomAbout *= the target's value for zoom, not the current one.

2009-07-06  Jeffrey Stedfast  <fejj@novell.com>

	Fixes drt 249.

	* fonts.cpp (LoadPortableUserInterface): Return the index of the
	Lucida font face.
	(TextFont::Load): If PUI is our first family, keep track of which
	face the Lucida face is and use that as our master. Otherwise use
	the first face.
	(TextFont::UpdateFaceExtents): Use the 'master' face to get the
	extents from, rather than the first face.

2009-07-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: PlayNext: play even if previous entry didn't fail.
	Fixes our test #136.

2009-07-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp|h: Remove wsx/smil parsing, it's a server side
	playlist format so we'll never get it, it'll be parsed on the
	media server.

2009-07-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: Fix warning.

2009-07-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* src.mdp: Updated.

2009-07-03  Larry Ewing  <lewing@novell.com>

	* textblock.cpp (ArrangeOverride): try to get textblock height
	stretching closer.  See 295 and 2020 for examples.

2009-07-03  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp: We don't need to change these actually.

2009-07-03  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp: When inside the if statement, we know that
	  toplevel and element are the same, so use 'element' instead
	  of 'toplevel' in case the toplevel is removed during the
	  loaded/resized event. Fixes memorabilia.

2009-07-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mms-downloader.cpp: ProcessResponseHeaderCallback:
	set current deployment.

2009-07-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp|h: