@@ -1,3 +1,7 @@
+2009-07-06  Jackson Harper  <jackson@ximian.com>
+
+	* xaml.cpp: Implement ignorable namespaces.
+
 2009-07-06  Larry Ewing  <lewing@novell.com>
 
 	* multiscaleimage.cpp (ZoomAboutLogicalPoint): make this compile.
